test/fail/classes/protected_outside_scope.lly
#[
SyntaxError: abc::f is marked protected, and not available here.
    from protected_outside_scope.lly:10
]#

class abc {
    protected define f {}
}

abc::f(abc::new())
